<resources>
    <string name="app_name">KBAndroidTechAssessment</string>
    <string name="transaction_detail_title">Travel Savings Account</string>
    <string name="balance_title">Available Balance:  </string>
    <string name="balance_value">$%1$s</string>
    <string name="balance_default_value">$0.00</string>

    <string name="bottom_sheet_title">Select Range</string>
    <string name="date_range_label">Date Range</string>
    <string name="date_range_hint">Select Date Range</string>
    <string name="btn_3_days">Last 3 Days</string>
    <string name="btn_10_days">Last 10 Days</string>
    <string name="btn_30_days">Last 30 Days</string>
    <string name="btn_confirm">Confirm</string>
</resources>